<?xml version="1.0"?>
<project
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.a2asdk</groupId>
    <version>1.0.0.Alpha2-SNAPSHOT</version>
    <artifactId>a2a-java-sdk-examples-helloworld5-server</artifactId>

    <name>Java SDK A2A Examples</name>
    <description>Examples for the Java SDK for the Agent2Agent Protocol (A2A)</description>

    <properties>
        <a2a.version>0.3.2.Final</a2a.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <grpc.version>1.77.0</grpc.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven-clean-plugin.version>3.5.0</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>3.8.0</maven-javadoc-plugin.version>
        <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
        <gmavenplus-plugin.version>4.2.1</gmavenplus-plugin.version>
        <sonatype-central-publishing-plugin.version>0.8.0</sonatype-central-publishing-plugin.version>
        <groovy.version>5.0.3</groovy.version>
        <gson.version>2.13.2</gson.version>
        <jakarta.enterprise.cdi-api.version>4.1.0</jakarta.enterprise.cdi-api.version>
        <jakarta.inject.jakarta.inject-api.version>2.0.1</jakarta.inject.jakarta.inject-api.version>
        <jakarta.json-api.version>2.1.3</jakarta.json-api.version>
        <jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
        <junit.version>5.13.4</junit.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <mapstruct-spi-protobuf.version>1.52.0</mapstruct-spi-protobuf.version>
        <mockito-core.version>5.17.0</mockito-core.version>
        <mockserver.version>5.15.0</mockserver.version>
        <mutiny-zero.version>1.1.1</mutiny-zero.version>
        <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
        <protobuf-java.version>4.33.1</protobuf-java.version>
        <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
        <quarkus.platform.version>3.31.2</quarkus.platform.version>
        <rest-assured.version>5.5.1</rest-assured.version>
        <slf4j.version>2.0.17</slf4j.version>
        <logback.version>1.5.18</logback.version>
        <error-prone.version>2.47.0</error-prone.version>
        <nullaway.version>0.13.1</nullaway.version>
        <error-prone.flag>-XDaddTypeAnnotationsToSymbol=true</error-prone.flag>
        <nullaway.args>-Xplugin:ErrorProne -XepDisableAllChecks
            -Xep:NullAway:ERROR -Xep:RequireExplicitNullMarking:WARN
            -XepOpt:NullAway:ExhaustiveOverride=true
            -XepOpt:NullAway:OnlyNullMarked=true
            -XepOpt:NullAway:JSpecifyMode=true -XepExcludedPaths:.*/src/test/.*
            -XepDisableWarningsInGeneratedCode</nullaway.args>

        <!-- Redirect test output to file -->
        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
        <quarkus.jvm.args>--add-opens=java.base/java.lang=ALL-UNNAMED</quarkus.jvm.args>

        <!-- release properties -->
        <release.auto.publish>false</release.auto.publish>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>1.1.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.github.a2asdk</groupId>
                <artifactId>a2a-java-sdk-client</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-client-transport-spi</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-client-transport-jsonrpc</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-client-transport-grpc</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-client-transport-rest</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-common</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-http-client</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-http-client-vertx</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-jsonrpc-common</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-spec</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-spec-grpc</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-server-common</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-microprofile-config</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-extras-common</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-transport-grpc</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-transport-jsonrpc</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-transport-rest</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-reference-common</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-reference-grpc</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-reference-jsonrpc</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-reference-rest</artifactId>
                <version>${a2a.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-bom</artifactId>
                <version>${slf4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf-java.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.code.gson</groupId>
                        <artifactId>gson</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>io.smallrye.reactive</groupId>
                <artifactId>mutiny-zero</artifactId>
                <version>${mutiny-zero.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.enterprise</groupId>
                <artifactId>jakarta.enterprise.cdi-api</artifactId>
                <version>${jakarta.enterprise.cdi-api.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.inject</groupId>
                <artifactId>jakarta.inject-api</artifactId>
                <version>${jakarta.inject.jakarta.inject-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.json</groupId>
                <artifactId>jakarta.json-api</artifactId>
                <version>${jakarta.json-api.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>jakarta.ws.rs</groupId>
                <artifactId>jakarta.ws.rs-api</artifactId>
                <version>${jakarta.ws.rs-api.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${rest-assured.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mock-server</groupId>
                <artifactId>mockserver-netty</artifactId>
                <version>${mockserver.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-tests-server-common</artifactId>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-tests-server-common</artifactId>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>a2a-java-sdk-server-common</artifactId>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>1.0.0</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>

        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-openai</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-bom</artifactId>
            <version>${quarkus.platform.version}</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>

        <dependency>
            <groupId>io.github.a2asdk</groupId>
            <artifactId>a2a-java-sdk-client</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.a2asdk</groupId>
            <artifactId>a2a-java-sdk-reference-jsonrpc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-resteasy</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>jakarta.enterprise.cdi-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.ws.rs</groupId>
            <artifactId>jakarta.ws.rs-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
